--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,11 @@
+
+
 html,
 body {
+  background:   #142029;
+  width: 100%;
+  color: white;
+  font-family: "Spoqa Han Sans Neo", sans-serif;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
