--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,12 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    
 }
+body::-webkit-scrollbar {
+  display: none;
+}
+
 
 a {
   color: inherit;
